--- a/.stow-local-ignore
+++ b/.stow-local-ignore
@@ -1,25 +1,29 @@
+# ~./dotfiles/.stow.local.ignore: Files to be ignored by gnu 'stow'
+
+#
+
 # Comments and blank lines are allowed.
+
+#
+
+# See 'info stow' section "4 Ignore Lists" for more information
 
 RCS
 .+,v
 
 CVS
-\.\#.+       # CVS conflict files / emacs lock files
+\.\#.+ # CVS conflict files / emacs lock files
 \.cvsignore
 
 \.svn
-_darcs
+\_darcs
 \.hg
 
 \.git
 \.gitignore
-\.gitmodules
 
-.+~          # emacs backup files
-\#.*\#       # emacs autosave files
+.+~ # emacs backup files
+\#.\*\# # emacs autosave files
 
-^/README.*
-^/LICENSE.*
-^/COPYING
-
-\installs.txt
+^/README.md
+^/installs.txt
