--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -13,7 +13,5 @@ style = 'bold #665BAE'
 symbol = ' '
 
 [git_status]
-disabled = false
-format = '[$modified](bold #F7768E)[$staged](bold #E6ECC0)'
-modified = '\[!\] '
-staged = '\[+\] '
+format = '([$all_status$ahead_behind]($style) )'
+style = "bold red"
