--- a/.config/aerospace/aerospace.toml
+++ b/.config/aerospace/aerospace.toml
@@ -123,6 +123,12 @@ alt-6 = 'workspace 6'
 alt-7 = 'workspace 7'
 alt-8 = 'workspace 8'
 alt-9 = 'workspace 9'
+alt-q = 'workspace Q'
+alt-w = 'workspace W'
+alt-e = 'workspace E'
+alt-r = 'workspace R'
+alt-t = 'workspace T'
+alt-y = 'workspace Y'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
 alt-shift-1 = 'move-node-to-workspace 1'
@@ -134,6 +140,13 @@ alt-shift-6 = 'move-node-to-workspace 6'
 alt-shift-7 = 'move-node-to-workspace 7'
 alt-shift-8 = 'move-node-to-workspace 8'
 alt-shift-9 = 'move-node-to-workspace 9'
+alt-shift-q = 'move-node-to-workspace Q'
+alt-shift-w = 'move-node-to-workspace W'
+alt-shift-e = 'move-node-to-workspace E'
+alt-shift-r = 'move-node-to-workspace R'
+alt-shift-t = 'move-node-to-workspace T'
+alt-shift-y = 'move-node-to-workspace Y'
+
 
 alt-shift-f = 'fullscreen'
 
@@ -167,8 +180,14 @@ alt-shift-l = ['join-with right', 'mode main']
 3 = 'main'
 4 = 'main'
 5 = 'main'
-6 = 'secondary'
-7 = 'secondary'
-8 = 'secondary'
-9 = 'secondary'
+6 = 'main'
+7 = 'main'
+8 = 'main'
+9 = 'main'
+Q = 'secondary'
+W = 'secondary'
+E = 'secondary'
+R = 'secondary'
+T = 'secondary'
+Y = 'secondary'
 
