Updating wezterm, brew, and lualine plugin

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -24,5 +24,6 @@ brew 'ripgrep'
 cask 'raycast'
 cask 'arc'
 cask 'wezterm'
+cask 'font-fira-code-nerd-font'
 cask 'visual-studio-code'
 cask 'nikitabobko/tap/aerospace'
