--- a/.config/brewfile/Brewfile
+++ b/.config/brewfile/Brewfile
@@ -11,8 +11,6 @@ brew 'zsh'
 brew 'zsh-syntax-highlighting'
 brew 'zsh-autosuggestions'
 brew 'bat'
-brew 'eza'
-brew 'starship'
 brew 'fortune'
 brew 'cowsay'
 brew 'fzf'
@@ -23,7 +21,8 @@ brew 'ripgrep'
 
 cask 'raycast'
 cask 'arc'
-cask 'wezterm'
 cask 'font-fira-code-nerd-font'
+cask 'font-jetbrains-mono-nerd-font'
 cask 'visual-studio-code'
+cask 'zed'
 cask 'nikitabobko/tap/aerospace'
