--- a/.config/ohmyposh/prompt.toml
+++ b/.config/ohmyposh/prompt.toml
@@ -1,39 +1,36 @@
-# console_title_template = '{{ .Shell }} in {{ .Folder }}'
-# version = 3
-# final_space = true
-
-schema = "https://raw.githubusercontent.com/JanDeDobbeleer/oh-my-posh/main/themes/schema.json"
-final_space = true
 version = 3
 
 [[blocks]]
-type = "prompt"
-alignment = "left"
+type = 'prompt'
+alignment = 'left'
 
 [[blocks.segments]]
-type = "text"
-foreground = "#98C379"
 style = "plain"
-template = "➜"
+template = "{{ if .Error }}<#E06C75>{{else}}<#98C379>{{end}}➜</> "
+type = "status"
+properties.always_enabled = true
 
 [[blocks.segments]]
-type = "path"
-foreground = "#56B6C2"
-style = "plain"
-template = " {{ .Path }} "
+template = '{{ .Path }} '
+foreground = 'cyan'
+type = 'path'
+style = 'plain'
+
 [blocks.segments.properties]
-style = "folder"
+style = 'folder'
 
 [[blocks.segments]]
 type = "git"
 foreground = "#D0666F"
 style = "plain"
-template = "<#5FAAE8>git:(</>{{ .HEAD }}<#5FAAE8>)</>"
+template = "<#5FAAE8>git:(</>{{ .HEAD }}<#5FAAE8>)</> "
+
 [blocks.segments.properties]
 branch_icon = ""
 
 [[blocks.segments]]
-type = "status"
-foreground = "#BF616A"
-style = "plain"
-template = " ✗"
+template = '{{ if .Working.Changed }}✗ {{ end }}'
+foreground = 'yellow'
+type = 'git'
+style = 'plain'
+properties.fetch_status = true
