Neovim and aerospace updates

--- a/.aerospace.toml
+++ b/.aerospace.toml
@@ -196,7 +196,7 @@ Y = 'secondary'
 
 # Use floating layout for some specific apps
 # https://nikitabobko.github.io/AeroSpace/guide#on-window-detected-callback
-[[on-window-detected]]
-check-further-callbacks = true
-run = 'layout floating'
+# [[on-window-detected]]
+# check-further-callbacks = true
+# run = 'layout floating'
 
