--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,9 +1,10 @@
 cursor-style = block
 shell-integration-features = no-cursor
+adjust-cell-height = 1
 font-size = 14
-window-padding-x = 5
+font-family = FiraCode Nerd Font Mono
+window-padding-x = 10
 window-padding-balance = true
 macos-titlebar-style = tabs
 theme = iterm2 Pastel Dark Background
-unfocused-split-opacity = 0.7
-
+font-feature = -calt
