Changing font family in ghostty

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -2,7 +2,7 @@ cursor-style = block
 shell-integration-features = no-cursor
 adjust-cell-height = 1
 font-size = 14
-font-family = FiraCode Nerd Font Mono
+font-family = BlexMono Nerd Font Mono
 window-padding-x = 10
 window-padding-balance = true
 macos-titlebar-style = tabs
