--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,10 +1,11 @@
-cursor-style = block
-shell-integration-features = no-cursor
-adjust-cell-height = 1
-font-size = 14
-font-family = BlexMono Nerd Font Mono
-window-padding-x = 10
-window-padding-balance = true
-macos-titlebar-style = tabs
 theme = iterm2 Pastel Dark Background
+font-size = 14
 font-feature = -calt
+cursor-style = bar
+adjust-cell-height = 10%
+shell-integration-features = cursor,no-sudo,title
+shell-integration = zsh
+window-padding-x = 6
+window-padding-balance = true
+window-theme = light
+window-colorspace = display-p3
