Updating configs and casks

--- a/.config/brewfile/Brewfile
+++ b/.config/brewfile/Brewfile
@@ -5,21 +5,16 @@ cask_args appdir: '/Applications'
 # Install packages
 
 brew 'zsh'
-brew 'zsh-syntax-highlighting'
-brew 'zsh-autosuggestions'
-brew 'bat'
-brew 'fortune'
-brew 'cowsay'
 brew 'fzf'
 brew 'neovim'
 brew 'lazygit'
 brew 'stow'
 brew 'ripgrep'
 brew 'oh-my-posh'
+brew 'bat'
 
 cask 'raycast'
-cask 'font-fira-code-nerd-font'
+cask 'nikitabobko/tap/aerospace'
 cask 'font-jetbrains-mono-nerd-font'
 cask 'visual-studio-code'
-cask 'zed'
-cask 'nikitabobko/tap/aerospace'
+cask 'ghostty'
