--- a/.config/vscode/settings.json
+++ b/.config/vscode/settings.json
@@ -2,12 +2,13 @@
   "editor.minimap.enabled": false,
   "editor.suggestSelection": "first",
   "editor.detectIndentation": true,
-  "editor.cursorStyle": "block",
+  "editor.cursorStyle": "line",
   "editor.tabSize": 2,
-  "editor.fontSize": 13.5,
+  "editor.fontSize": 14,
   "editor.lineHeight": 1.6,
   "editor.fontLigatures": false,
-  "editor.fontFamily": "Menlo, Monaco, 'Courier New', monospace",
+  // "editor.fontFamily": "Menlo, Monaco, 'Courier New', monospace",
+  "editor.fontFamily": "JetBrainsMono Nerd Font Mono",
   "editor.formatOnSave": true,
   "editor.formatOnType": false,
   "editor.formatOnPaste": false,
@@ -24,11 +25,9 @@
   "editor.stickyScroll.scrollWithEditor": false,
   "workbench.tree.enableStickyScroll": false,
   "editor.scrollbar.horizontal": "hidden",
-  "editor.scrollbar.vertical": "hidden",
-  "workbench.editor.showTabs": "single",
+  "workbench.editor.showTabs": "multiple",
   "workbench.editor.limit.enabled": true,
   "workbench.editor.limit.perEditorGroup": true,
   "workbench.editor.limit.value": 1,
-  "workbench.activityBar.location": "hidden",
-  "workbench.colorTheme": "Night Owl (No Italics)"
+  "workbench.activityBar.location": "hidden"
 }
