Making tmux to support ghostty colors

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -9,3 +9,4 @@ window-padding-x = 6
 window-padding-balance = true
 window-theme = dark
 window-colorspace = display-p3
+# macos-titlebar-style = tabs
