--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,5 +1,7 @@
 theme = iterm2 Pastel Dark Background
 font-family = SF Mono
+font-style = medium
+font-style-italic = false
 font-size = 14
 font-feature = -calt
 cursor-style = block
