--- a/.config/vscode/settings.json
+++ b/.config/vscode/settings.json
@@ -6,9 +6,10 @@
   "editor.tabSize": 2,
   "editor.fontSize": 14,
   "editor.lineHeight": 1.6,
+  "editor.lineNumbers": "relative",
   "editor.fontLigatures": false,
   // "editor.fontFamily": "Menlo, Monaco, 'Courier New', monospace",
-  "editor.fontFamily": "JetBrainsMono Nerd Font Mono",
+  "editor.fontFamily": "SF Mono",
   "editor.formatOnSave": true,
   "editor.formatOnType": false,
   "editor.formatOnPaste": false,
@@ -29,5 +30,8 @@
   "workbench.editor.limit.enabled": true,
   "workbench.editor.limit.perEditorGroup": true,
   "workbench.editor.limit.value": 1,
+  "extensions.experimental.affinity": {
+    "asvetliakov.vscode-neovim": 1
+  },
   "workbench.activityBar.location": "hidden"
 }
