--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -31,25 +31,19 @@ bind -n S-Right next-window
 bind -n M-H previous-window
 bind -n M-L next-window
 
-# Status line
-set-option -g status-left-length 100
-set-option -g status-left " #{session_name}  "
-set-option -g status-right " "
-set-option -g status-style "fg=#7C7D83 bg=default"
-set-option -g window-status-format "#{window_index}:#{window_name}#{window_flags} "
-set-option -g window-status-current-format "#{window_index}:#{window_name}#{window_flags} "
-set-option -g window-status-current-style "fg=#dcc7a0"
-set-option -g window-status-activity-style none
-
-set -g pane-border-style fg=colour234
-set -g pane-active-border-style "bg=default fg=colour234"
-
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'rose-pine/tmux'
+
+set -g @rose_pine_variant 'moon'
+set -g @rose_pine_only_windows 'on'
 
 run '~/.tmux/plugins/tpm/tpm'
+
+set -g pane-border-style fg=colour234
+set -g pane-active-border-style "bg=default fg=colour234"
 
 # set vi-mode
 set-window-option -g mode-keys vi
