Updating neovim and vscode settings

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -10,6 +10,6 @@ shell-integration-features = no-cursor,no-sudo,title
 shell-integration = zsh
 window-padding-x = 6
 window-padding-balance = true
-window-theme = dark
+window-theme = light
 window-colorspace = display-p3
 # macos-titlebar-style = tabs
