--- a/.config/vscode/settings.json
+++ b/.config/vscode/settings.json
@@ -32,5 +32,6 @@
   "workbench.editor.limit.value": 1,
   "extensions.experimental.affinity": {
     "asvetliakov.vscode-neovim": 1
-  }
+  },
+  "workbench.activityBar.location": "hidden"
 }
