--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -35,10 +35,10 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'rose-pine/tmux'
+set -g @plugin 'niksingh710/minimal-tmux-status'
 
-set -g @rose_pine_variant 'moon'
-set -g @rose_pine_only_windows 'on'
+# Theme options
+set -g @minimal-tmux-bg "#9897A9"
 
 run '~/.tmux/plugins/tpm/tpm'
 
