--- a/.config/brewfile/Brewfile
+++ b/.config/brewfile/Brewfile
@@ -10,11 +10,12 @@ brew 'neovim'
 brew 'lazygit'
 brew 'stow'
 brew 'ripgrep'
-brew 'oh-my-posh'
 brew 'bat'
 
 cask 'raycast'
 cask 'nikitabobko/tap/aerospace'
 cask 'font-jetbrains-mono-nerd-font'
+cask 'font-fira-code-nerd-font'
+cask 'font-blex-mono-nerd-font'
 cask 'visual-studio-code'
-cask 'ghostty'
+cask 'alacritty'
