--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -37,21 +37,17 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'niksingh710/minimal-tmux-status'
 
-# Theme options
+# Theme & Colors
+set -g @minimal-tmux-indicator-str "tmux"
 set -g @minimal-tmux-bg "#9897A9"
-
-run '~/.tmux/plugins/tpm/tpm'
-
 set -g pane-border-style fg=colour235
 set -g pane-active-border-style "bg=default fg=colour235"
 
-# set vi-mode
-set-window-option -g mode-keys vi
+# Yanking
+set -g @yank_with_mouse on
+set -g @yank_action 'copy-pipe'
 
-# keybindings
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+run '~/.tmux/plugins/tpm/tpm'
 
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
