Updating tmux config

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -38,7 +38,8 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'niksingh710/minimal-tmux-status'
 
 # Theme & Colors
-set -g @minimal-tmux-indicator-str "tmux"
+# set -g @minimal-tmux-indicator-str "tmux"
+set -g @minimal-tmux-justify "center"
 set -g @minimal-tmux-bg "#9897A9"
 set -g pane-border-style fg=colour235
 set -g pane-active-border-style "bg=default fg=colour235"
