Changing the font in alacritty

--- a/.config/brewfile/Brewfile
+++ b/.config/brewfile/Brewfile
@@ -15,8 +15,8 @@ brew 'bat'
 
 cask 'raycast'
 cask 'nikitabobko/tap/aerospace'
-cask 'font-jetbrains-mono-nerd-font'
 cask 'font-fira-code-nerd-font'
 cask 'font-blex-mono-nerd-font'
+cask 'font-meslo-lg-nerd-font'
 cask 'visual-studio-code'
 cask 'alacritty'
