--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -7,13 +7,13 @@ padding = { x = 5, y = 5 }
 dynamic_padding = true
 decorations_theme_variant = "Dark"
 resize_increments = true
-# opacity = 0.85
-# blur = true
+
 
 [font]
-normal = { family = "BlexMono Nerd Font Mono", style = "Regular" }
-size = 14
+# MesloLGS Nerd Font Mono, BlexMono Nerd Font Mono
+normal = { family = "MesloLGS Nerd Font Mono", style = "Regular" }
 offset = { y = 2 }
+size = 14
 
 [selection]
 save_to_clipboard = true
