Using fira-code font in alacritty

--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -11,8 +11,8 @@ resize_increments = true
 
 [font]
 # MesloLGS Nerd Font Mono, BlexMono Nerd Font Mono
-normal = { family = "MesloLGS Nerd Font Mono", style = "Regular" }
-offset = { y = 2 }
+normal = { family = "FiraCode Nerd Font Mono", style = "Regular" }
+offset = { y = 3 }
 size = 14
 
 [selection]
