Fixing config issues

--- a/.config/brewfile/Brewfile
+++ b/.config/brewfile/Brewfile
@@ -9,9 +9,9 @@ brew 'fzf'
 brew 'neovim'
 brew 'lazygit'
 brew 'stow'
-brew 'nvm'
 brew 'ripgrep'
 brew 'bat'
+brew 'go'
 
 cask 'raycast'
 cask 'nikitabobko/tap/aerospace'
