--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -36,6 +36,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'niksingh710/minimal-tmux-status'
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 
 # Theme & Colors
 # set -g @minimal-tmux-indicator-str "tmux"
@@ -43,6 +44,9 @@ set -g @minimal-tmux-justify "center"
 set -g @minimal-tmux-bg "#9897A9"
 set -g pane-border-style fg=colour235
 set -g pane-active-border-style "bg=default fg=colour235"
+
+# Scrolling
+set -g @scroll-speed-num-lines-per-scroll "1"
 
 # Yanking
 set -g @yank_with_mouse on
