Setting up ghostty terminal

--- a/.config/brewfile/Brewfile
+++ b/.config/brewfile/Brewfile
@@ -11,15 +11,14 @@ brew 'lazygit'
 brew 'stow'
 brew 'ripgrep'
 brew 'bat'
-brew 'go'
 brew 'tmux'
 brew 'tpm'
 
 cask 'raycast'
 cask 'nikitabobko/tap/aerospace'
+cask 'ghostty'
+cask 'alacritty'
 cask 'font-fira-code-nerd-font'
 cask 'font-blex-mono-nerd-font'
 cask 'font-meslo-lg-nerd-font'
 cask 'visual-studio-code'
-cask 'alacritty'
-cask 'ollama'
