Updating ghostty config

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -6,6 +6,7 @@ window-padding-x = 6
 window-padding-balance = true
 window-theme = dark
 window-colorspace = display-p3
+confirm-close-surface = false
 
 background-opacity = 0.92
 background-blur = false
