--- a/zed/settings.json
+++ b/zed/settings.json
@@ -11,15 +11,12 @@
     "metrics": false,
     "diagnostics": false
   },
-  "features": {
-    "copilot": false
-  },
   "vim_mode": true,
   "vertical_scroll_margin": 10,
-  "ui_font_size": 14.5,
-  "buffer_font_size": 14,
-  "buffer_font_weight": 600,
-  "buffer_font_family": "JetBrainsMono Nerd Font",
+  "ui_font_size": 14,
+  "buffer_font_size": 13.5,
+  "buffer_font_weight": 400,
+  "buffer_font_family": "BlexMono Nerd Font Mono",
   "relative_line_numbers": true,
   "show_completion_documentation": false,
   "buffer_font_features": {
@@ -42,15 +39,14 @@
     "indent_size": 15
   },
   "vim": {
-    "use_system_clipboard": "always",
-    "use_multiline_find": true
+    "use_system_clipboard": "always"
   },
   "git": {
     "inline_blame": {
       "enabled": false
     }
   },
-  "theme": "Base16 Gruvbox dark, pale",
+  "theme": "One Dark",
   "experimental.theme_overrides": {
     "syntax": {
       "comment": {
