--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -15,9 +15,9 @@ brew 'tpm'
 
 cask 'raycast'
 cask 'nikitabobko/tap/aerospace'
-case 'zed'
+cask 'zed'
 cask 'ghostty'
 cask 'font-fira-code-nerd-font'
 cask 'font-blex-mono-nerd-font'
 cask 'font-meslo-lg-nerd-font'
-case 'font-jetbrains-mono-nerd-font'
+cask 'font-jetbrains-mono-nerd-font'
