Updating zed configuration

--- a/zed/settings.json
+++ b/zed/settings.json
@@ -27,7 +27,7 @@
     "line_height": "standard"
   },
   "tab_bar": {
-    "show": false,
+    "show": true,
     "show_nav_history_buttons": false
   },
   "toolbar": {
