Updating tmux config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -33,6 +33,8 @@ bind -n M-L next-window
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'niksingh710/minimal-tmux-status'
@@ -44,6 +46,9 @@ set -g @minimal-tmux-justify "center"
 set -g @minimal-tmux-bg "#9897A9"
 set -g pane-border-style fg=colour235
 set -g pane-active-border-style "bg=default fg=colour235"
+
+# Sessions
+set -g @continuum-restore 'on'
 
 # Scrolling
 set -g @scroll-speed-num-lines-per-scroll "1"
