Fixing issues with tmux config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,6 +11,9 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# Bind prefix + / to enter copy mode and start search
+bind / copy-mode \; command-prompt -p "Search:" "send -X search-forward '%%'"
+
 # Start windows and panes at 1, not 0
 set -g base-index 1
 set -g pane-base-index 1
@@ -46,9 +49,6 @@ set -g @minimal-tmux-justify "center"
 set -g @minimal-tmux-bg "#9897A9"
 set -g pane-border-style fg=colour235
 set -g pane-active-border-style "bg=default fg=colour235"
-
-# Sessions
-set -g @continuum-restore 'on'
 
 # Scrolling
 set -g @scroll-speed-num-lines-per-scroll "1"
