--- a/zed/settings.json
+++ b/zed/settings.json
@@ -13,16 +13,16 @@
   },
   "vim_mode": true,
   "vertical_scroll_margin": 10,
-  "ui_font_size": 14,
-  "buffer_font_size": 14,
+  "ui_font_size": 13.5,
+  "buffer_font_size": 13.5,
   "buffer_font_weight": 400,
-  "buffer_font_family": "BlexMono Nerd Font Mono",
+  "buffer_font_family": "MesloLGL Nerd Font Mono",
   "relative_line_numbers": true,
   "show_completion_documentation": false,
   "buffer_font_features": {
     "calt": false
   },
-  "format_on_save": "language_server",
+  "format_on_save": "off",
   "terminal": {
     "line_height": "standard"
   },
@@ -46,7 +46,7 @@
       "enabled": false
     }
   },
-  "theme": "One Dark",
+  "theme": "Gruvbox Dark Hard",
   "experimental.theme_overrides": {
     "syntax": {
       "comment": {
