--- a/zed/settings.json
+++ b/zed/settings.json
@@ -16,8 +16,8 @@
   "ui_font_size": 13.5,
   "buffer_font_size": 13.5,
   "buffer_font_weight": 400,
-  "buffer_font_family": "BlexMono Nerd Font Mono",
-  "relative_line_numbers": true,
+  "buffer_font_family": "JetBrainsMono Nerd Font Mono",
+  "relative_line_numbers": "enabled",
   "show_completion_documentation": false,
   "buffer_font_features": {
     "calt": false
