Updating ghostty config themes

--- a/ghostty/config
+++ b/ghostty/config
@@ -1,4 +1,3 @@
-theme = ayu
 cursor-style = block
 cursor-color = #999999
 cursor-style-blink = false
@@ -12,22 +11,27 @@ confirm-close-surface = false
 shell-integration-features = no-cursor,no-sudo,title
 shell-integration = zsh
 
-font-size = 13
 font-style-italic = false
 font-feature = -calt
 
-# font-family = MesloLGL Nerd Font Mono
-# font-style = Regular
+# ======= FONTS =======
+
+font-family = MesloLGL Nerd Font Mono
+font-style = Regular
+font-size = 13
 
 font-family = JetBrainsMono Nerd Font Mono
 font-style = Medium
 adjust-cell-height = 10%
+font-size = 14
 
-# Theme 1
-window-theme = light
+# ======= THEMES =======
+
+theme = later this evening
+window-theme = dark
 macos-titlebar-style = native
 
-# Theme 2
+# theme = ayu
 # window-theme = dark
 # background-opacity = 0.92
 # background-blur = false
