--- a/ghostty/config
+++ b/ghostty/config
@@ -16,9 +16,9 @@ font-feature = -calt
 
 # ======= FONTS =======
 
-font-family = MesloLGL Nerd Font Mono
-font-style = Regular
-font-size = 13
+# font-family = MesloLGL Nerd Font Mono
+# font-style = Regular
+# font-size = 13
 
 font-family = JetBrainsMono Nerd Font Mono
 font-style = Medium
