--- a/zed/settings.json
+++ b/zed/settings.json
@@ -13,8 +13,8 @@
   },
   "vim_mode": true,
   "vertical_scroll_margin": 10,
-  "ui_font_size": 13.5,
-  "buffer_font_size": 13.5,
+  "ui_font_size": 13,
+  "buffer_font_size": 13,
   "buffer_font_weight": 400,
   "buffer_font_family": "JetBrainsMono Nerd Font Mono",
   "relative_line_numbers": "enabled",
@@ -46,7 +46,7 @@
       "enabled": false
     }
   },
-  "theme": "Gruvbox Dark",
+  "theme": "One Dark",
   "experimental.theme_overrides": {
     "syntax": {
       "comment": {
